feat: basic framework installation

--- a/.gitignore
+++ b/.gitignore
@@ -420,5 +420,5 @@ obj/
 # Ignore all local history of files
 .history
 .ionide
-
+.env
 # End of https://www.toptal.com/developers/gitignore/api/csharp,visualstudiocode,dotnetcore
