--- a/discordcs-music-bot.csproj
+++ b/discordcs-music-bot.csproj
@@ -12,5 +12,6 @@
   <ItemGroup>
     <PackageReference Include="DSharpPlus" Version="4.2.0" />
     <PackageReference Include="DSharpPlus.CommandsNext" Version="4.2.0" />
+    <PackageReference Include="DSharpPlus.VoiceNext" Version="4.2.0" />
   </ItemGroup>
 </Project>
