--- a/discordcs-music-bot.csproj
+++ b/discordcs-music-bot.csproj
@@ -13,5 +13,6 @@
     <PackageReference Include="DSharpPlus" Version="4.2.0" />
     <PackageReference Include="DSharpPlus.CommandsNext" Version="4.2.0" />
     <PackageReference Include="DSharpPlus.VoiceNext" Version="4.2.0" />
+    <PackageReference Include="YoutubeExplode" Version="6.2.5" />
   </ItemGroup>
 </Project>
