--- a/discordcs-music-bot.csproj
+++ b/discordcs-music-bot.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="DSharpPlus" Version="4.4.0-nightly-01436" />
     <PackageReference Include="DSharpPlus.CommandsNext" Version="4.4.0-nightly-01436" />
+    <PackageReference Include="DSharpPlus.SlashCommands" Version="4.4.0-nightly-01436" />
     <PackageReference Include="DSharpPlus.VoiceNext" Version="4.4.0-nightly-01436" />
     <PackageReference Include="YoutubeExplode" Version="6.2.9" />
   </ItemGroup>
